--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -39,7 +39,7 @@ jobs:
       uses: JohnnyMorganz/stylua-action@v4.0.0
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
-        args: --check
+        args: library/
         version: latest
 
     - name: Commit changes
