--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -44,7 +44,7 @@ jobs:
 
     - name: Commit changes
       run:
-        git config user.name [Bot]demiurgeQuantified
-        git config user.email 8355611+demiurgeQuantified@users.noreply.github.com
+        git config --global user.name [Bot]demiurgeQuantified
+        git config --global user.email 8355611+demiurgeQuantified@users.noreply.github.com
         git commit -a -m "Updated by Github Action"
         git push
