--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -43,8 +43,8 @@ jobs:
         version: latest
 
     - name: Commit changes
-      run:
-        git config --global user.name [Bot]demiurgeQuantified
-        git config --global user.email 8355611+demiurgeQuantified@users.noreply.github.com
+      run: |
+        git config user.name [Bot]demiurgeQuantified
+        git config user.email 8355611+demiurgeQuantified@users.noreply.github.com
         git commit -a -m "Updated by Github Action"
         git push
