--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -46,5 +46,6 @@ jobs:
       run: |
         git config user.name [Bot]demiurgeQuantified
         git config user.email 8355611+demiurgeQuantified@users.noreply.github.com
+        git add .
         git commit -a -m "Updated by Github Action"
         git push
